--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1",
     "vue-template-compiler": "^2.6.14"
   }
 }
